# gui-vpn

./: .gitignore  CHANGELOG.md  KAN-10_documentation.md  KAN-2_task_definition.md  KAN-4_project_structure.md  KAN-5_config_manager.md  KAN-6_vpn_service.md  KAN-7_network_checker.md  KAN-8_ui_tkinter.md  KAN-9_policy_kit.md  Makefile  README.md  install.sh  pyproject.toml
awg_gui/: __main__.py  autostart.py  config_manager.py  controller.py  i18n.py  logger.py  network_checker.py  settings.py  ui.py  vpn_service.py
docs/: install.md  rollback-to-bash.md  runbook.md
policy/: awg-gui-helper  org.awg-gui.policy
tests/: test_autostart.py  test_config_manager.py  test_controller.py  test_helper.py  test_main.py  test_network_checker.py  test_settings.py  test_vpn_service.py
