[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awg-gui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
awg-gui = "awg_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["awg_gui*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=awg_gui --cov-report=term-missing"
